update chatSquare auto scroll botton fix scroll botton eror by async function add style for chatsquare scrollbar add information side tab microbug fixed

--- a/Client/Component/Home/Body/Body.scss
+++ b/Client/Component/Home/Body/Body.scss
@@ -98,9 +98,12 @@
     height: 100px;
     color: white;
     transition: 0.5s;
+    cursor: pointer;
     &:after {
-      content: "";
+      content: '';
+      box-sizing: border-box;
       position: absolute;
+      outline: none;
       z-index: 1;
       bottom: 1%;
       left: 50%;
